maze.lessons.maze.island.IslandMaze.scala.error
Escaper:18: error: ';' expected but 'while' found.
	} while (!estFaceMur()) {
          ^